# AI-Tax-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-ocr.txt
.github/workflows/: ci.yml
app/i18n/: microcopy.py
app/infra/: config.py
app/knowledge/: ingest.py  loader.py  models.py  retriever.py  rules_service.py  sanitize.py  synonyms.py
app/llm/: groq_adapter.py
app/maintenance/: integrity_scan.py  retention.py
app/memory/: store.py
app/nlu/: context.py  quantities.py
app/ocr/: adapter.py  runner.py
app/orchestrator/: 0.py  graph.py  models.py  prompts.py  safety.py
app/receipts/: parser.py
app/reports/: elster_map.py  json_export.py  pdf.py  summary.py
app/safety/: files.py  policy.py  policy.yaml
app/services/: telemetry.py
app/ui/: streamlit_app.py
scripts/: run.ps1  setup.ps1
tests/e2e/: test_scenarios_stub.py
tests/golden/: s01_commute_ho_2025_en.yml  s02_equipment_de.yml  s03_off_scope.yml
tests/integration/: test_attachments.py  test_export_evidence.py  test_integrity_scan.py  test_nlu_flow.py  test_ocr_flow.py  test_ocr_import_flow.py  test_orchestrator_commit_and_use.py  test_orchestrator_flow.py  test_orchestrator_numeric.py  test_pronoun_resolution.py
tests/unit/: test_calculators_commute.py  test_calculators_equipment.py  test_calculators_home_office.py  test_critic_invariants.py  test_entity_memory.py  test_file_safety.py  test_imports.py  test_money.py  test_quantity_parser.py  test_receipt_parser.py  (+3 more)
tools/: calculators.py  constants.py  money.py
(+19 files in other folders)
