[project]
name = "de-tax-assistant"
version = "0.1.0"
description = "MVP scaffold for a grounded German employee tax assistant (2024–2025)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".data", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
exclude = ["tests/", ".venv", ".data"]

# 'overrides' syntax for mypy configuration
[[tool.mypy.overrides]]
module = [
    "fitz",
    "pytesseract",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# This tells pytest to look for packages in the root directory.
pythonpath = ["."]

# This tells the installer to find both the 'app' and 'tools' packages.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tools*"]
exclude = ["tests*"]

[[tool.mypy.per-file-ignores]]
"app/ocr/*.py" = ["import-untyped"]
